--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ temp/
 coverage
 ormconfig.json
 dist
+.prettierignore
+.prettierrc
+eslint.config.mjs
+.editorconfig
 
 uploads/*
 !uploads/.gitkeep
