--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-    "name": "api_vendas",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "scripts": {
-        "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
-        "lint": "eslint ."
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.11.1",
-        "@types/cors": "^2.8.17",
-        "@types/express": "^4.17.21",
-        "@types/node": "^22.6.1",
-        "@typescript-eslint/eslint-plugin": "^8.7.0",
-        "@typescript-eslint/parser": "^8.7.0",
-        "eslint": "^9.11.1",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.2.1",
-        "globals": "^15.9.0",
-        "prettier": "^3.3.3",
-        "ts-node-dev": "^2.0.0",
-        "tsconfig-paths": "^4.2.0",
-        "typescript": "5.5.4",
-        "typescript-eslint": "^8.7.0"
-    },
-    "dependencies": {
-        "cors": "^2.8.5",
-        "express": "^4.21.0",
-        "express-async-errors": "^3.1.1"
-    }
+  "name": "api_vendas",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
+    "lint": "eslint .",
+    "format": "prettier .",
+    "lint-fix": "eslint . --ext .ts --fix",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.11.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.6.1",
+    "eslint": "^9.11.1",
+    "globals": "^15.9.0",
+    "prettier": "3.3.3",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.7.0",
+    "typeorm": "0.2.x"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "express-async-errors": "^3.1.1"
+  }
 }
