--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "@types/node": "^22.6.1",
     "eslint": "^9.11.1",
     "globals": "^15.9.0",
+    "pg": "^8.13.0",
     "prettier": "3.3.3",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
+    "typeorm": "0.2.x",
     "typescript": "5.5.4",
-    "typescript-eslint": "^8.7.0",
-    "typeorm": "0.2.x"
+    "typescript-eslint": "^8.7.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
