--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@eslint/js": "^9.11.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.3",
     "@types/node": "^22.6.1",
     "eslint": "^9.11.1",
     "globals": "^15.9.0",
@@ -26,6 +27,7 @@
     "typescript-eslint": "^8.7.0"
   },
   "dependencies": {
+    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1"
