--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.6.1",
     "eslint": "^9.11.1",
     "globals": "^15.9.0",
@@ -27,9 +30,12 @@
     "typescript-eslint": "^8.7.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
